---
title: Housekeeping Module - Class Diagram
---
classDiagram
    class HousekeepingModule {
        <<Module>>
        +HousekeepingController
        +HousekeepingService
        +StaffModule
        +RoomsModule
    }

    class HousekeepingController {
        <<Controller>>
        -housekeepingService: HousekeepingService
        +POST templates CreateTemplateDto ChecklistTemplate
        +GET templates ChecklistTemplate[]
        +POST logs LogChecklistDto ChecklistLog
        +PATCH rooms/:roomId/complete Room
        +GET my-assignments RoomAssignment[]
        +GET logs/room/:roomId ChecklistLog[]
        +POST assignments AssignRoomDto RoomAssignment
    }

    class HousekeepingService {
        <<Service>>
        -templateRepo: Repository~ChecklistTemplate~
        -logRepo: Repository~ChecklistLog~
        -assignmentRepo: Repository~RoomAssignment~
        -staffService: StaffService
        -roomsService: RoomsService
        +createTemplate(dto) ChecklistTemplate
        +listTemplates() ChecklistTemplate[]
        +logChecklist(accountId, dto) ChecklistLog
        +completeCleaning(accountId, roomId) Room
        +listMyAssignments(accountId) RoomAssignment[]
        +listLogsByRoom(roomId) ChecklistLog[]
        +assignRoom(managerAccountId, roomId, cleanerStaffId) RoomAssignment
    }

    class RoomsModule {
        <<Module>>
        +RoomsService
    }

    class RoomsService {
        <<Service>>
        +setStatus(roomId, status) Room
    }

    class ChecklistTemplate {
        <<Entity>>
        +templateId: uuid
        +templateType: string
        +itemName: string
        +description: string
    }

    class ChecklistLog {
        <<Entity>>
        +logId: uuid
        +roomId: uuid
        +staffId: uuid
        +templateType: string
        +logTime: Date
        +evidenceImage: string
        +notes: string
    }

    class RoomAssignment {
        <<Entity>>
        +assignmentId: uuid
        +roomId: uuid
        +cleanerId: uuid
        +assignedBy: uuid
        +assignedAt: Date
    }

    class Room {
        <<Entity>>
        +roomId: uuid
        +roomCode: string
        +status: string
    }

    class StaffInfo {
        <<Entity>>
        +staffId: uuid
        +accountId: uuid
        +fullName: string
    }

    class StaffService {
        <<Service>>
        +findByAccountId(accountId) StaffInfo
        +findOne(staffId) StaffInfo
    }

    class CreateTemplateDto {
        <<DTO>>
        +templateType: string
        +itemName: string
        +description: string
    }

    class LogChecklistDto {
        <<DTO>>
        +roomId: uuid
        +templateType: string
        +evidenceImage: string
        +notes: string
    }

    class AssignRoomDto {
        <<DTO>>
        +roomId: uuid
        +cleanerStaffId: uuid
    }

    HousekeepingModule --> HousekeepingController
    HousekeepingModule --> HousekeepingService
    HousekeepingModule --> StaffModule
    HousekeepingModule --> RoomsModule
    HousekeepingController --> HousekeepingService
    HousekeepingService --> StaffService : resolves StaffId by accountId
    HousekeepingService --> RoomsService : delegates setStatus Available
    HousekeepingService --> ChecklistTemplate : persist
    HousekeepingService --> ChecklistLog : persist + check
    HousekeepingService --> RoomAssignment : persist + check

    RoomAssignment --> Room : RoomID
    RoomAssignment --> StaffInfo : CleanerId
    ChecklistLog --> Room : RoomID
    ChecklistLog --> StaffInfo : StaffId
    ChecklistLog --> ChecklistTemplate : TemplateType

    HousekeepingService ..> CreateTemplateDto
    HousekeepingService ..> LogChecklistDto
    HousekeepingService ..> AssignRoomDto

    note for HousekeepingController "Roles: Manager templates/assign, Cleaner or Manager logs/my-assignments/templates, Manager or Receptionist logs/room/:roomId, Cleaner only rooms/:roomId/complete (with ParseUUIDPipe)"
    note for HousekeepingService "completeCleaning: requires RoomAssignment + ChecklistLog -> RoomsService.setStatus Available"
    note for RoomAssignment "Manager assigns Cleaner to Room. Cleaner must have assignment before logging checklist or completing."
    note for ChecklistLog "Stored once per Cleaner + Room; gates the completeCleaning action."
